# astar_norse_world

./: .gitignore  README.md  TASKS-core.md  TASKS-feature.md  TASKS-qa.md  TASKS.md  pyproject.toml
.claude/hooks/: pre-commit.sh
.devcontainer/: devcontainer.json
docs/: api-and-quickstart.md  backtest_results.md  benchmark_results.md  feature_backtest.md  game-overview.md  research_findings.md  round_analysis.md  scoring.md  simulation-mechanics.md  strategy.md
scripts/: analyze_rounds.py  backtest.py  backtest_features.py  backtest_v2.py  capture_round.py  capture_viewports.py  error_analysis.py  loo_backtest_v3.py  post_round.py  resubmit_round.py  submit_round.py  submit_v2.py  submit_v3.py
src/: __main__.py  adaptive_priors.py  api_client.py  calibration.py  cell_classifier.py  constants.py  feature_predictor.py  features.py  map_generator.py  ml_predictor.py  observation.py  online_calibration.py  pipeline.py  pipeline_types.py  position_priors.py  prediction_utils.py  prediction_validator.py  predictor.py  predictor_protocol.py  predictor_v2.py  prior_builder.py  query_planner_v2.py  query_strategy.py  regime.py  round_collector.py  runner.py  scoring.py  settlement.py  sim_phases.py  simulation.py  soft_regime.py  state_loader.py  terrain.py  transforms.py  unified_priors.py
tests/: conftest.py  test_adaptive_priors.py  test_api_client.py  test_benchmark_predictions.py  test_calibration.py  test_cell_classifier.py  test_feature_predictor.py  test_features.py  test_map_generator.py  test_ml_predictor.py  test_model_search.py  test_observation.py  test_online_calibration.py  test_pipeline.py  test_position_priors.py  test_prediction_utils.py  test_prediction_validator.py  test_predictor.py  test_predictor_protocol.py  test_predictor_v2.py  test_prior_builder.py  test_query_planner_v2.py  test_query_strategy.py  test_regime.py  test_round_collector.py  test_runner.py  test_scoring.py  test_settlement.py  test_simulation.py  test_soft_regime.py  test_state_loader.py  test_submit_pipeline.py  test_submit_v2.py  test_terrain.py  test_transforms.py  test_unified_priors.py  test_web_app.py  test_web_backtest.py  test_web_data.py  test_web_models.py
web/: __init__.py  app.py  backtest.py  data.py  model_search.py  models.py  routes_research.py  routes_rounds.py  strategies.py  transforms.py
(+416 files in other folders)
