[project]
name = "astar-norse-world"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "fastapi>=0.104",
    "jinja2>=3.1",
    "uvicorn>=0.24",
    "starlette>=0.27",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-requests",
    "bandit",
    "pip-audit",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes: unused imports, undefined names
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort: import ordering
    "UP",   # pyupgrade: modernize syntax
    "B",    # flake8-bugbear: common bugs
    "SIM",  # flake8-simplify: simplifiable code
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit: security checks
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-q --tb=line"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80
